[project]
name = "api_ocr"
version = "0.1.0"
description = "OCR API project using tesseract and fastapi"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.21.1",
    "python-multipart>=0.0.5",
    "pytesseract>=0.3.10",
    "Pillow>=9.4.0",
    "python-dotenv>=0.21.0",
    "sentry-sdk[fastapi]>=1.0.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.1",
    "mock>=5.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
