[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.42.50",
    "fastapi>=0.129.0",
    "filetype>=1.2.0",
    "httpx>=0.28.1",
    "pdf2image>=1.17.0",
    "pillow>=12.1.1",
    "pydantic-settings>=2.13.0",
    "pytesseract>=0.3.13",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.22",
    "sentry-sdk>=2.53.0",
    "uvicorn>=0.40.0",
    "uvloop>=0.22.1",
]

[dependency-groups]
dev = [
    "pylint>=4.0.4",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
]
